# star-chamber

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yaml  release.yaml  tests.yaml
src/star_chamber/: __init__.py  cli.py  config.py  consensus.py  council.py  parsing.py  prompt.py  schema.py  transport.py  types.py
src/star_chamber/spec/: SPEC.md  __init__.py
src/star_chamber/spec/examples/: __init__.py
src/star_chamber/spec/examples/code_review/: __init__.py  council-output.json  provider-responses.json  request.json
src/star_chamber/spec/examples/design_question/: __init__.py  council-output.json  provider-responses.json  request.json
src/star_chamber/spec/schemas/: __init__.py  code-review-result.schema.json  council-config.schema.json  council-output.schema.json  design-advice-result.schema.json  provider-config.schema.json  provider-response.schema.json  review-request.schema.json
tests/: test_cli.py  test_config.py  test_consensus.py  test_council.py  test_parsing.py  test_prompt.py  test_schema.py  test_transport.py  test_types.py
tests/testdata/: invalid_config.json  providers.json  providers_direct.json  providers_platform.json
tests/testdata/provider_responses/: anthropic_code_review.txt  malformed.txt  openai_code_review.txt  openai_design.txt
